<resources>
    <string name="app_name">MealHut Eats</string>
    <string name="welcome_note">Welcome to\nMealHut Eats</string>
    <string name="greeting_one">Welcome to the</string>
    <string name="greeting_two">MealHut Eats!</string>
    <string name="info_note"><![CDATA[Energize your day with a burst of vitality by indulging in fresh
    and wholesome fare that nourishes both body and soul.\n\nSavor the goodness of thoughtfully crafted ingredients,
    making every bite a delightful journey towards a healthier, more vibrant you.]]></string>
    <string name="welcome_btn_text">Get Started</string>
    <string name="logo_part_one">M</string>
    <string name="logo_part_two">eal</string>
    <string name="logo_part_three">H</string>
    <string name="logo_part_four">ut</string>
    <string name="logo_part_five">.</string>
    <string name="mealhut_slogan">Experience a Fusion of Flavor and Health.</string>
    <string name="login_email_phone_editText">Email address / Phone number</string>
    <string name="login_password_editText">Password</string>
    <string name="text_login">Sign in</string>
    <string name="text_or">- or -</string>
    <string name="text_google_login">Sign in with Google</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_signup_link">Don\'t have an account? Sign Up</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_signin_link">Already have an account? Sign in</string>
    <string name="login_password_confirm_editText">Confirm password</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_offers">Offers</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_order_history_title">My Orders</string>
    <string name="side_nav_offers_title">Offers</string>
    <string name="side_nav_message_title">My Messages</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_support_title">Support</string>
    <string name="side_nav_Login_title">Sign in</string>
    <string name="side_nav_logout_title">Sign out</string>
    <string name="demo_name">Keshara Ranasinghe</string>
    <string name="demo_email">example@gmail.com</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_heading">What do you\nwant to eat today?</string>
    <string name="search_text_hint">Search your food</string>
    <string name="category_name">category</string>
    <string name="promotions_title">Promotions</string>
    <string name="popular_title">Popular</string>
    <string name="popular_item_name">Popular Item</string>
    <string name="popular_item_price">Rs.100</string>
    <string name="meal_demo_rating">4.8</string>
    <string name="demo_single_product_price">Rs.0</string>
    <string name="demo_product_name">Product Name</string>
    <string name="demo_single_product_info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="single_product_default_qty">1</string>
    <string name="add_to_cart_btn_text">Add to Cart</string>
    <string name="drop_from_cart_btn_text">Drop All from Cart</string>
    <string name="offer_heading">Savory savings\njust for You.</string>
    <string name="offer_text">Explore delicious daily deals with Tasty Treats! Dive into affordable, mouthwatering meals that\'ll make your day. Don\'t miss out – grab a bite of happiness today!</string>
    <string name="cart_heading">My Cart</string>
    <string name="cart_empty_text">Looks like your cart is empty!\n\nWhy not fill it with some fresh and delicious food?\nExplore our menu and treat yourself to a delightful culinary experience!</string>
    <string name="history_empty_text">Looks like you haven\'t ordered anything yet!\n\nWhy not order some fresh and delicious food?\nExplore our menu and treat yourself to a delightful culinary experience!</string>
    <string name="cart_item_name">Item Name</string>
    <string name="cart_text">Great choice! Your cart is filled with mouth-watering delights. Ready to savor these delectable meals?\nComplete your order now and treat your taste buds to a feast of flavors!</string>
    <string name="my_cart_total_items">Total Items</string>
    <string name="my_cart_sub_total">Sub Total</string>
    <string name="my_cart_discount">Discount</string>
    <string name="default_discount">0.0</string>
    <string name="my_cart_net_total">Net Total</string>
    <string name="btn_confirm_order_text">Confirm Order</string>
    <string name="your_name_label">Full Name</string>
    <string name="default_not_set">Not Set</string>
    <string name="your_email_label">Email Address</string>
    <string name="your_phone_label">Phone Number</string>
    <string name="your_address_label">Billing Address</string>
    <string name="btn_edit_profile_text">Edit Profile</string>
    <string name="text_save_profile">Save Changes</string>
    <string name="app_version">App Version : mh-1.0.0.a1-23</string>
    <string name="app_copyrights">Copyrights \u00A9 MealHut Sri Lanka (Pvt). Ltd</string>
    <string name="demo_date">Starts on : 2023/11/18</string>
    <string name="custom_dialog_app_name">MealHut Eats</string>
    <string name="custom_dialog_message">Demo message</string>
    <string name="ok_text">Ok</string>
    <string name="please_wait_text">Please wait. . .</string>
    <string name="after_signup_text">You\'re all set!</string>
    <string name="custom_dialog_verify_text">We have sent OTP to your phone. Please enter it to verify. Thank you!</string>
    <string name="enter_otp_hint">Enter OTP</string>
    <string name="verify_text">Verify</string>
    <string name="otp_expire_text">(OTP will expire within 60 seconds.)</string>
    <string name="resend_text">Resend</string>
    <string name="processing_text">Processing. . .</string>
    <string name="delivered_text">Delivered</string>
    <string name="cancel_text">Cancel</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="order_id_label">Order ID:</string>
    <string name="order_history_heading">My Orders</string>
    <string name="order_history_desc">Discover your recent orders and savor the flavors of your culinary journey. Enjoy reliving those delicious moments!</string>
    <string name="wifi_alert_msg">Oops! 😟 It seems like you\'re not connected to the internet. Please check your network connection and try again.</string>
    <string name="retry_text">Retry</string>
    <string name="dummy_address">MealHut Sri Lanka (Pvt).Ltd,\nNo.83,\nSir George R. De Silva Mawatha,\nColombo 2,\nSri Lanka.</string>
    <string name="dummy_phone">+94 (0)11 4282345</string>
    <string name="dummy_email">info@mealhutsl.lk</string>
    <string name="web_client_id">128284638504-9gkvfb44dv8in1h4h7imgiqh9ma7qsqb.apps.googleusercontent.com</string>
</resources>