<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/off_white_2"
    app:cardCornerRadius="30dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_app_name"
            android:textSize="18sp"
            android:fontFamily="@font/lato_black"
            android:textColor="@color/primary_green"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/custom_dialog_verify_text"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/otpEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="12dp"
            android:inputType="number"
            android:textSize="18sp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/enter_otp_hint"
            android:background="@drawable/custom_input_shape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/otp_expire_text"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/primary_gray"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/customInputDialogCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="100dp"
                android:text="@string/cancel_text"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary_gray"
                android:textSize="15sp"
                android:fontFamily="@font/lato_bold"/>

            <Button
                android:id="@+id/customDialogVerifyBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:text="@string/verify_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:fontFamily="@font/lato_bold"/>

        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>