<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/off_white_2"
    app:cardCornerRadius="30dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_app_name"
            android:textSize="18sp"
            android:fontFamily="@font/lato_black"
            android:textColor="@color/primary_green"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recipient_name"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/verifyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/default_not_set"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/primary_gray"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_phone_label"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/verifyPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/default_not_set"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/primary_gray"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_address_label"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/verifyAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/default_not_set"
            android:textSize="16sp"
            android:lineHeight="18dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/primary_gray"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/verifyDialogCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel_text"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary_gray"
                android:textSize="15sp"
                android:fontFamily="@font/lato_bold"/>

            <Button
                android:id="@+id/verifyDialogVerifyBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/verify_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:fontFamily="@font/lato_bold"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>